@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-16T16:29:33Z",
+  "timestamp" : "2022-04-19T16:33:55Z",
   "count_outdated" : 0,
   "uniques_outdated" : 0,
-  "count" : 19,
-  "uniques" : 3,
+  "count" : 20,
+  "uniques" : 4,
   "views" : [
     {
       "timestamp": "2022-04-15T00:00:00Z",
@@ -16,6 +16,13 @@
       "timestamp": "2022-04-16T00:00:00Z",
       "count": 17,
       "count_minmax": [ 2, 17 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-04-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
