@@ -1,5 +1,5 @@
 {
-  "count": 19,
+  "count": 20,
   "uniques": 2,
   "views": [
     {
@@ -10,6 +10,11 @@
     {
       "timestamp": "2022-04-16T00:00:00Z",
       "count": 17,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-19T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
